hphp/hack/test/typecheck/constraints/contravariance_constraint_bad.php.exp
File "contravariance_constraint_bad.php", line 30, characters 12-29:
Some type constraint(s) here are violated (Typing[4110])
File "contravariance_constraint_bad.php", line 22, characters 26-26:
'T' is a constrained type
File "contravariance_constraint_bad.php", line 22, characters 31-37:
This is an object of type IHasFoo
File "contravariance_constraint_bad.php", line 29, characters 60-66:
It is incompatible with an object of type IHasBar
